--- a/package.json
+++ b/package.json
@@ -1,7 +1,18 @@
 {
-  "name": "vue3-codemirror",
+  "name": "codemirror-editor-vue3",
+  "files": [
+    "dist"
+  ],
+  "main": "./dist/codemirror-editor-vue3.umd.js",
+  "module": "./dist/codemirror-editor-vue3.es.js",
+  "exports": {
+    ".": {
+      "import": "./dist/codemirror-editor-vue3.es.js",
+      "require": "./dist/codemirror-editor-vue3.umd.js"
+    }
+  },
   "description": "CodeMirror component for Vue3",
-  "version": "0.1.1-beat",
+  "version": "0.1.0",
   "license": "MIT",
   "private": false,
   "author": {
@@ -12,15 +23,10 @@
     "url": "https://github.com/surmon-china/vue-codemirror/issues"
   },
   "homepage": "https://github.com/surmon-china/vue-codemirror#readme",
-  "main": "dist/vue3-codemirror.js",
-  "unpkg": "dist/vue3-codemirror.js",
-  "jsnext:main": "dist/vue3-codemirror.js",
-  "files": [
-    "dist",
-    "src"
-  ],
+  "unpkg": "dist/codemirror-editor-vue3.js",
+  "jsnext:main": "dist/codemirror-editor-vue3.js",
   "jspm": {
-    "main": "dist/vue3-codemirror.js",
+    "main": "dist/codemirror-editor-vue3.js",
     "registry": "npm",
     "format": "esm"
   },
@@ -29,7 +35,7 @@
     "url": "https://github.com/surmon-china/vue-codemirror.git"
   },
   "keywords": [
-    "vue3-codemirror",
+    "codemirror-editor-vue3",
     "vue3 codemirror",
     "codemirror",
     "vue3",
@@ -38,6 +44,7 @@
   ],
   "scripts": {
     "build": "vite build",
+    "rollup": "rollup -c rollup.config.js",
     "unit": "cross-env BABEL_ENV=test NODE_ENV=testing karma start test/unit/karma.conf.js --watch",
     "test": "cross-env BABEL_ENV=test NODE_ENV=testing karma start test/unit/karma.conf.js --single-run",
     "lint": "eslint --ext .js,.vue src test/unit/specs",
@@ -47,10 +54,15 @@
   "dependencies": {
     "codemirror": "^5.62.2",
     "diff-match-patch": "^1.0.5",
-    "less": "^4.1.1",
-    "vue": "^3.1.5"
+    "rollup-plugin-esbuild": "^4.5.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-vue": "^6.0.0"
   },
   "devDependencies": {
+    "vue": "^3.1.5",
+    "less": "^4.1.1",
+    "@vitejs/plugin-vue": "^1.4.0",
+    "@vue/compiler-sfc": "^3.1.5",
     "babel-plugin-import": "^1.13.3",
     "eslint": "^7.23.0",
     "eslint-config-airbnb-base": "^14.2.1",
@@ -58,8 +70,6 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.14.0",
-    "@vitejs/plugin-vue": "^1.3.0",
-    "@vue/compiler-sfc": "^3.1.5",
     "vite": "^2.4.4"
   }
 }
