--- a/package.json
+++ b/package.json
@@ -1,26 +1,29 @@
 {
   "name": "codemirror-editor-vue3",
+  "description": "CodeMirror component for Vue3",
+  "version": "0.1.3",
+  "license": "MIT",
   "files": [
-    "dist"
+    "dist",
+    "./dist/style.css"
   ],
   "main": "./dist/codemirror-editor-vue3.umd.js",
   "module": "./dist/codemirror-editor-vue3.es.js",
+  "style": "./dist/style.css",
   "exports": {
     ".": {
       "import": "./dist/codemirror-editor-vue3.es.js",
       "require": "./dist/codemirror-editor-vue3.umd.js"
+    },
+    "./dist/style.css": {
+      "import": "./dist/style.css",
+      "require": "./dist/style.css"
     }
   },
-  "description": "CodeMirror component for Vue3",
-  "version": "0.1.0",
-  "license": "MIT",
   "private": false,
   "author": {
     "name": "zhangren",
     "email": "906155099@qq.com"
-  },
-  "bugs": {
-    "url": "https://github.com/RennCheung/codemirror-editor-vue3"
   },
   "homepage": "https://github.com/RennCheung/codemirror-editor-vue3",
   "unpkg": "dist/codemirror-editor-vue3.js",
@@ -43,33 +46,41 @@
     "log"
   ],
   "scripts": {
+    "dev": "vite",
     "build": "vite build",
-    "rollup": "rollup -c rollup.config.js",
-    "unit": "cross-env BABEL_ENV=test NODE_ENV=testing karma start test/unit/karma.conf.js --watch",
-    "test": "cross-env BABEL_ENV=test NODE_ENV=testing karma start test/unit/karma.conf.js --single-run",
-    "lint": "eslint --ext .js,.vue src test/unit/specs",
-    "finish": "npm run lint && npm test && npm run build",
-    "publish": "git push && git push --tags && npm publish"
+    "publish": "git push && git push --tags && npm publish",
+    "docs-dev": "vitepress dev docs --open",
+    "docs-build": "vitepress build docs",
+    "docs-serve": "vitepress serve docs",
+    "deploy-docs": "bash scripts/deploy.sh"
   },
   "dependencies": {
-    "codemirror": "^5.62.2",
-    "diff-match-patch": "^1.0.5",
-    "rollup-plugin-esbuild": "^4.5.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-vue": "^6.0.0"
+    "codemirror": "^5.62.3",
+    "diff-match-patch": "^1.0.5"
   },
   "devDependencies": {
-    "vue": "^3.1.5",
-    "less": "^4.1.1",
-    "@vitejs/plugin-vue": "^1.4.0",
-    "@vue/compiler-sfc": "^3.1.5",
+    "@vitejs/plugin-vue": "^1.6.0",
+    "@vue/compiler-sfc": "^3.2.2",
+    "@vue/runtime-dom": "^3.2.2",
+    "ant-design-vue": "^2.2.6",
     "babel-plugin-import": "^1.13.3",
+    "dedent": "^0.7.0",
+    "diff-match-patch": "^1.0.5",
     "eslint": "^7.23.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.14.0",
-    "vite": "^2.4.4"
+    "less": "^4.1.1",
+    "rollup-plugin-esbuild": "^4.5.0",
+    "rollup-plugin-postcss": "^4.0.1",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-vue": "^6.0.0",
+    "vite": "^2.5.1",
+    "vite-plugin-vuedoc": "^3.1.3",
+    "vitepress": "^0.16.1",
+    "vue": "^3.2.2",
+    "vue-tsc": "^0.2.2"
   }
 }
