--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "private": false,
   "author": {
-    "name": "zhangren",
+    "name": "RennCheung",
     "email": "906155099@qq.com"
   },
   "homepage": "https://renncheung.github.io/codemirror-editor-vue3/index.html",
@@ -52,7 +52,7 @@
     "docs-dev": "vitepress dev docs --open",
     "docs-build": "vitepress build docs",
     "docs-serve": "vitepress serve docs",
-    "deploy-docs": "bash scripts/deploy.sh"
+    "deploy-docs": "bash scripts/deploy-docs.sh"
   },
   "dependencies": {
     "codemirror": "^5.62.3",
@@ -61,26 +61,15 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.6.0",
     "@vue/compiler-sfc": "^3.2.2",
-    "@vue/runtime-dom": "^3.2.2",
-    "ant-design-vue": "^2.2.6",
-    "babel-plugin-import": "^1.13.3",
     "dedent": "^0.7.0",
     "diff-match-patch": "^1.0.5",
     "eslint": "^7.23.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.14.0",
     "less": "^4.1.1",
-    "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-cpy": "^2.0.1",
-    "rollup-plugin-esbuild": "^4.5.0",
-    "rollup-plugin-postcss": "^4.0.1",
-    "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-vue": "^6.0.0",
     "vite": "^2.5.1",
-    "vite-plugin-vuedoc": "^3.1.3",
     "vitepress": "^0.16.1",
     "vue": "^3.2.2",
     "vue-tsc": "^0.2.2"
