--- a/package.json
+++ b/package.json
@@ -59,19 +59,26 @@
     "diff-match-patch": "^1.0.5"
   },
   "devDependencies": {
+    "@types/node": "^16.11.12",
+    "@typescript-eslint/eslint-plugin": "^5.6.0",
+    "@typescript-eslint/parser": "^5.6.0",
+    "@vue/cli-plugin-typescript": "~4.5.15",
     "@vitejs/plugin-vue": "^1.6.0",
     "@vue/compiler-sfc": "^3.2.2",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-vue": "^8.2.0",
+    "typescript": "^4.5.3",
+    "vue-tsc": "^0.3.0",
     "dedent": "^0.7.0",
     "diff-match-patch": "^1.0.5",
     "eslint": "^7.23.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-vue": "^7.14.0",
     "less": "^4.1.1",
     "rollup-plugin-cpy": "^2.0.1",
     "rollup-plugin-vue": "^6.0.0",
     "vite": "^2.5.1",
     "vitepress": "^0.16.1",
-    "vue": "^3.2.2",
-    "vue-tsc": "^0.2.2"
+    "vue": "^3.2.2"
   }
 }
