--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "codemirror-editor-vue3",
   "description": "CodeMirror component for Vue3",
-  "version": "0.2.5",
+  "version": "0.3.1-beta",
   "license": "MIT",
   "files": [
     "dist",
