--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "codemirror-editor-vue3",
   "description": "CodeMirror component for Vue3",
-  "version": "0.3.2-beta",
+  "version": "0.3.3",
   "license": "MIT",
   "files": [
     "dist",
