--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "codemirror-editor-vue3",
   "description": "CodeMirror component for Vue3",
-  "version": "1.0.1",
+  "version": "1.1.0-beta16",
   "license": "MIT",
   "files": [
-    "dist",
-    "./dist/style.css"
+    "dist/codemirror-editor-vue3.es.js",
+    "dist/codemirror-editor-vue3.umd.js",
+    "dist/packages/*",
+    "dist/style.css"
   ],
+  "types": "./dist/packages/index.d.ts",
   "main": "./dist/codemirror-editor-vue3.umd.js",
   "module": "./dist/codemirror-editor-vue3.es.js",
   "style": "./dist/style.css",
@@ -48,7 +51,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "publish": "git push && git push --tags && npm publish",
+    "build:types": "tsc --emitDeclarationOnly vite build",
+    "publish": "git push && git push --tags && npm publish && npm run deploy-docs",
     "docs-dev": "vitepress dev docs --open",
     "docs-build": "vitepress build docs",
     "docs-serve": "vitepress serve docs",
@@ -59,25 +63,35 @@
     "diff-match-patch": "^1.0.5"
   },
   "devDependencies": {
+    "@commitlint/cli": "^16.1.0",
+    "@commitlint/config-conventional": "^16.0.0",
+    "@types/codemirror": "^5.60.5",
+    "@types/diff-match-patch": "^1.0.32",
     "@types/node": "^16.11.13",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
     "@vitejs/plugin-vue": "^2.0.1",
+    "@vitejs/plugin-vue-jsx": "^1.3.7",
     "@vue/cli-plugin-typescript": "~4.5.15",
     "@vue/compiler-sfc": "^3.2.26",
     "@vueuse/core": "^7.3.0",
     "dedent": "^0.7.0",
     "diff-match-patch": "^1.0.5",
-    "eslint": "^8.4.1",
+    "eslint": "^8.7.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-vue": "^8.2.0",
+    "eslint-plugin-vue": "^8.3.0",
     "less": "^4.1.2",
+    "prettier": "^2.5.1",
     "rollup-plugin-cpy": "^2.0.1",
     "rollup-plugin-vue": "^6.0.0",
     "typescript": "^4.5.4",
+    "unplugin-auto-import": "^0.5.11",
     "vite": "^2.7.2",
+    "vite-plugin-checker": "^0.4.2",
+    "vite-plugin-dts": "^0.9.9",
     "vitepress": "^0.20.8",
     "vue": "^3.2.26",
     "vue-tsc": "^0.3.0"
