--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "codemirror-editor-vue3",
   "description": "CodeMirror component for Vue3",
-  "version": "2.0.3-beta",
+  "version": "2.0.3",
   "license": "MIT",
   "files": [
     "dist/codemirror-editor-vue3.es.js",
@@ -53,6 +53,7 @@
     "build": "vite build",
     "build:types": "tsc --emitDeclarationOnly vite build",
     "publish": "git push && git push --tags && npm publish && npm run deploy-docs",
+    "publish-beta": "npm publish --tag=beta",
     "docs-dev": "vitepress dev docs --open",
     "docs-build": "vitepress build docs",
     "docs-serve": "vitepress serve docs",
