--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "codemirror-editor-vue3",
   "description": "CodeMirror component for Vue3",
-  "version": "2.0.3",
+  "version": "2.0.4-beta",
   "license": "MIT",
   "files": [
     "dist/codemirror-editor-vue3.es.js",
@@ -67,8 +67,8 @@
   "devDependencies": {
     "@commitlint/cli": "^16.1.0",
     "@commitlint/config-conventional": "^16.0.0",
-    "@types/codemirror": "^5.60.5",
     "@types/diff-match-patch": "^1.0.32",
+    "@types/codemirror": "^5.60.5",
     "@types/node": "^16.11.13",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
