--- a/package.json
+++ b/package.json
@@ -67,8 +67,8 @@
   "devDependencies": {
     "@commitlint/cli": "^16.1.0",
     "@commitlint/config-conventional": "^16.0.0",
-    "@types/diff-match-patch": "^1.0.32",
     "@types/codemirror": "^5.60.5",
+    "@types/diff-match-patch": "^1.0.32",
     "@types/node": "^16.11.13",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
@@ -94,8 +94,12 @@
     "vite": "^2.7.2",
     "vite-plugin-checker": "^0.4.2",
     "vite-plugin-dts": "^0.9.9",
-    "vitepress": "^0.20.8",
+    "vite-plugin-pages": "^0.22.0",
+    "vite-plugin-windicss": "^1.8.3",
+    "vitepress": "^0.22.3",
     "vue": "^3.2.26",
-    "vue-tsc": "^0.3.0"
+    "vue-router": "^4.0.14",
+    "vue-tsc": "^0.3.0",
+    "windicss": "^3.5.1"
   }
 }
