chore: 支持在 playground 中直接使用库名导入

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     "forceConsistentCasingInFileNames": true,
     "paths": {
       "@/*": ["packages/*"],
-      "./*": ["./*"]
+      "./*": ["./*"],
+      "codemirror-editor-vue3": ["packages/index.ts"]
     }
   },
   "include": [
