--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "codemirror-editor-vue3",
   "description": "CodeMirror component for Vue3",
-  "version": "2.1.3",
+  "version": "2.1.4",
   "license": "MIT",
   "files": [
     "dist/codemirror-editor-vue3.es.js",
@@ -58,6 +58,8 @@
     "docs-build": "vitepress build docs",
     "docs-serve": "vitepress serve docs",
     "deploy-docs": "bash scripts/deploy-docs.sh",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
+    "release": "node scripts/release.js",
     "tsc": "tsc"
   },
   "dependencies": {
@@ -100,6 +102,14 @@
     "vue": "^3.2.26",
     "vue-router": "^4.0.14",
     "vue-tsc": "^0.3.0",
-    "windicss": "^3.5.1"
+    "windicss": "^3.5.1",
+    "chalk": "^4.1.2",
+    "conventional-changelog-cli": "^2.0.31",
+    "enquirer": "^2.3.6",
+    "execa": "^4.0.2",
+    "lint-staged": "^10.2.10",
+    "minimist": "^1.2.6",
+    "semver": "^7.3.5",
+    "yorkie-pnpm": "^2.0.1"
   }
 }
