--- a/package.json
+++ b/package.json
@@ -72,37 +72,36 @@
     "@types/codemirror": "^5.60.5",
     "@types/diff-match-patch": "^1.0.32",
     "@types/node": "^16.11.13",
-    "@typescript-eslint/eslint-plugin": "^5.7.0",
-    "@typescript-eslint/parser": "^5.7.0",
-    "@vitejs/plugin-vue": "^2.0.1",
-    "@vitejs/plugin-vue-jsx": "^1.3.7",
+    "@typescript-eslint/eslint-plugin": "^5.54.0",
+    "@typescript-eslint/parser": "^5.54.0",
+    "@vitejs/plugin-vue": "^4.0.0",
+    "@vitejs/plugin-vue-jsx": "^3.0.0",
     "@vue/cli-plugin-typescript": "~4.5.15",
-    "@vue/compiler-sfc": "^3.2.26",
-    "@vueuse/core": "^7.3.0",
+    "@vueuse/core": "^9.13.0",
     "dedent": "^0.7.0",
     "diff-match-patch": "^1.0.5",
-    "eslint": "^8.7.0",
+    "eslint": "^8.35.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-vue": "^8.3.0",
-    "less": "^4.1.2",
-    "prettier": "^2.5.1",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-vue": "^9.9.0",
+    "less": "^4.1.3",
+    "prettier": "^2.8.4",
     "rollup-plugin-cpy": "^2.0.1",
     "rollup-plugin-vue": "^6.0.0",
-    "typescript": "^4.5.4",
-    "unplugin-auto-import": "^0.5.11",
-    "vite": "^2.7.2",
-    "vite-plugin-checker": "^0.4.2",
-    "vite-plugin-dts": "^1.2.0",
-    "vite-plugin-pages": "^0.22.0",
-    "vite-plugin-windicss": "^1.8.3",
-    "vitepress": "^0.22.3",
-    "vue": "^3.2.26",
-    "vue-router": "^4.0.14",
-    "vue-tsc": "^0.3.0",
-    "windicss": "^3.5.1",
+    "typescript": "^4.9.5",
+    "unplugin-auto-import": "^0.15.0",
+    "vite": "^4.1.4",
+    "vite-plugin-checker": "^0.5.6",
+    "vite-plugin-dts": "^2.0.2",
+    "vite-plugin-pages": "^0.28.0",
+    "vite-plugin-windicss": "^1.8.10",
+    "vitepress": "1.0.0-alpha.49",
+    "vue": "^3.2.47",
+    "vue-router": "^4.1.6",
+    "vue-tsc": "^1.2.0",
+    "windicss": "^3.5.6",
     "chalk": "^4.1.2",
     "conventional-changelog-cli": "^2.0.31",
     "enquirer": "^2.3.6",
