--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -20,8 +20,8 @@ body:
       label: Validations
       description: Before submitting the issue, please make sure you do the following
       options:
-        - label: Read the [docs](https://renncheung.github.io/codemirror-editor-vue3/index.html).
+        - label: Read the [docs](https://renncheung.github.io/codemirror-editor-vue3/en/guide/getting-started).
           required: true
-        - label: Check that there isn't [already an issue](https://github.com/RennCheung/codemirror-editor-vue3/issues) that reports the same bug to avoid creating a duplicate.
+        - label: Check that there isn't [already an issue](https://github.com/RennCheung/codemirror-editor-vue3/issues?q=) that reports the same bug to avoid creating a duplicate.
           required: true
 
