--- a/package.json
+++ b/package.json
@@ -1,26 +1,17 @@
 {
   "name": "codemirror-editor-vue3",
   "description": "CodeMirror component for Vue3",
-  "version": "2.2.2",
+  "version": "2.3.0-beta1",
   "license": "MIT",
-  "files": [
-    "dist/codemirror-editor-vue3.es.js",
-    "dist/codemirror-editor-vue3.umd.js",
-    "dist/packages/*",
-    "dist/style.css"
-  ],
+  "files": ["dist"],
+  "type": "module",
   "types": "./dist/packages/index.d.ts",
-  "main": "./dist/codemirror-editor-vue3.umd.js",
-  "module": "./dist/codemirror-editor-vue3.es.js",
-  "style": "./dist/style.css",
+  "main": "./dist/codemirror-editor-vue3.umd.cjs",
+  "module": "./dist/codemirror-editor-vue3.js",
   "exports": {
     ".": {
-      "import": "./dist/codemirror-editor-vue3.es.js",
-      "require": "./dist/codemirror-editor-vue3.umd.js"
-    },
-    "./dist/style.css": {
-      "import": "./dist/style.css",
-      "require": "./dist/style.css"
+      "import": "./dist/codemirror-editor-vue3.js",
+      "require": "./dist/codemirror-editor-vue3.umd.cjs"
     }
   },
   "private": false,
@@ -66,6 +57,11 @@
     "codemirror": "^5.64.0",
     "diff-match-patch": "^1.0.5"
   },
+  "peerDependencies": {
+    "vue": "3.x",
+    "codemirror": "5.x",
+    "diff-match-patch": "^1.0.5"
+  },
   "devDependencies": {
     "@commitlint/cli": "^16.1.0",
     "@commitlint/config-conventional": "^16.0.0",
@@ -78,18 +74,25 @@
     "@vitejs/plugin-vue-jsx": "^3.0.0",
     "@vue/cli-plugin-typescript": "~4.5.15",
     "@vueuse/core": "^9.13.0",
+    "chalk": "^4.1.2",
+    "conventional-changelog-cli": "^2.0.31",
     "dedent": "^0.7.0",
     "diff-match-patch": "^1.0.5",
+    "enquirer": "^2.3.6",
     "eslint": "^8.35.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.9.0",
+    "execa": "^4.0.2",
     "less": "^4.1.3",
+    "lint-staged": "^10.2.10",
+    "minimist": "^1.2.6",
     "prettier": "^2.8.4",
     "rollup-plugin-cpy": "^2.0.1",
     "rollup-plugin-vue": "^6.0.0",
+    "semver": "^7.3.5",
     "typescript": "^4.9.5",
     "unplugin-auto-import": "^0.15.0",
     "vite": "^4.1.4",
@@ -102,13 +105,6 @@
     "vue-router": "^4.1.6",
     "vue-tsc": "^1.2.0",
     "windicss": "^3.5.6",
-    "chalk": "^4.1.2",
-    "conventional-changelog-cli": "^2.0.31",
-    "enquirer": "^2.3.6",
-    "execa": "^4.0.2",
-    "lint-staged": "^10.2.10",
-    "minimist": "^1.2.6",
-    "semver": "^7.3.5",
     "yorkie-pnpm": "^2.0.1"
   }
 }
