--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "codemirror-editor-vue3",
   "description": "CodeMirror component for Vue3",
-  "version": "2.3.0-beta2",
+  "version": "2.3.0-beta.1",
   "license": "MIT",
   "files": [
     "dist"
@@ -45,14 +45,12 @@
     "dev": "vite",
     "build": "vite build",
     "build:types": "tsc --emitDeclarationOnly vite build",
-    "publish-pkg": "npm run release && vite build && git push && git push --tags && npm publish && npm run deploy-docs",
-    "publish-beta": "npm run release && vite build && npm publish --tag=beta",
     "docs-dev": "vitepress dev docs --open",
     "docs-build": "vitepress build docs",
     "docs-serve": "vitepress serve docs",
     "deploy-docs": "bash scripts/deploy-docs.sh",
+    "release": "tsx scripts/release.ts",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
-    "release": "node scripts/release.cjs",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix",
     "tsc": "tsc"
   },
@@ -61,9 +59,9 @@
     "diff-match-patch": "^1.0.5"
   },
   "peerDependencies": {
-    "vue": "^3.x",
     "codemirror": "^5.x",
-    "diff-match-patch": "^1.0.5"
+    "diff-match-patch": "^1.0.5",
+    "vue": "^3.x"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.1.0",
@@ -81,21 +79,24 @@
     "conventional-changelog-cli": "^2.0.31",
     "dedent": "^0.7.0",
     "diff-match-patch": "^1.0.5",
-    "enquirer": "^2.3.6",
     "eslint": "^8.35.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.9.0",
-    "execa": "^4.0.2",
+    "execa": "^7.0.0",
     "less": "^4.1.3",
     "lint-staged": "^10.2.10",
     "minimist": "^1.2.6",
+    "picocolors": "^1.0.0",
     "prettier": "^2.8.4",
+    "prompts": "^2.4.2",
     "rollup-plugin-cpy": "^2.0.1",
     "rollup-plugin-vue": "^6.0.0",
     "semver": "^7.3.5",
+    "tsx": "^3.12.3",
+    "enquirer": "^2.3.6",
     "typescript": "^4.9.5",
     "unplugin-auto-import": "^0.15.0",
     "vite": "^4.1.4",
