--- a/package.json
+++ b/package.json
@@ -44,12 +44,11 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "build:types": "tsc --emitDeclarationOnly vite build",
     "docs-dev": "vitepress dev docs --open",
     "docs-build": "vitepress build docs",
     "docs-serve": "vitepress serve docs",
     "deploy-docs": "bash scripts/deploy-docs.sh",
-    "release": "tsx scripts/release.ts",
+    "release": "npm run build:types && tsx scripts/release.ts",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix",
     "tsc": "tsc"
@@ -66,48 +65,46 @@
   "devDependencies": {
     "@commitlint/cli": "^16.1.0",
     "@commitlint/config-conventional": "^16.0.0",
-    "@types/codemirror": "^5.60.5",
-    "@types/diff-match-patch": "^1.0.32",
-    "@types/node": "^16.11.13",
-    "@typescript-eslint/eslint-plugin": "^5.54.0",
-    "@typescript-eslint/parser": "^5.54.0",
-    "@vitejs/plugin-vue": "^4.0.0",
-    "@vitejs/plugin-vue-jsx": "^3.0.0",
-    "@vue/cli-plugin-typescript": "~4.5.15",
-    "@vueuse/core": "^9.13.0",
+    "@types/codemirror": "^5.60.13",
+    "@types/diff-match-patch": "^1.0.36",
+    "@types/node": "^16.18.60",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^6.10.0",
+    "@vitejs/plugin-vue": "^4.4.0",
+    "@vitejs/plugin-vue-jsx": "^3.0.2",
+    "@vue/cli-plugin-typescript": "~4.5.19",
     "chalk": "^4.1.2",
     "conventional-changelog-cli": "^2.0.31",
     "dedent": "^0.7.0",
     "diff-match-patch": "^1.0.5",
-    "eslint": "^8.35.0",
+    "eslint": "^8.53.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-vue": "^9.9.0",
+    "eslint-config-prettier": "^8.10.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-vue": "^9.18.1",
     "execa": "^7.0.0",
-    "less": "^4.1.3",
+    "less": "^4.2.0",
     "lint-staged": "^10.2.10",
     "minimist": "^1.2.6",
     "picocolors": "^1.0.0",
-    "prettier": "^2.8.4",
+    "prettier": "^3.0.3",
     "prompts": "^2.4.2",
-    "rollup-plugin-cpy": "^2.0.1",
     "rollup-plugin-vue": "^6.0.0",
     "semver": "^7.3.5",
-    "tsx": "^3.12.3",
+    "tsx": "^3.14.0",
     "enquirer": "^2.3.6",
-    "typescript": "^4.9.5",
-    "unplugin-auto-import": "^0.15.0",
-    "vite": "^4.1.4",
-    "vite-plugin-checker": "^0.5.6",
-    "vite-plugin-dts": "^2.0.2",
-    "vite-plugin-pages": "^0.28.0",
-    "vite-plugin-windicss": "^1.8.10",
+    "typescript": "^5.2.2",
+    "unplugin-auto-import": "^0.15.3",
+    "vite": "^4.5.0",
+    "vite-plugin-checker": "^0.6.2",
+    "vite-plugin-dts": "^2.3.0",
+    "vite-plugin-pages": "^0.31.0",
+    "vite-plugin-windicss": "^1.9.1",
     "vitepress": "1.0.0-alpha.49",
-    "vue": "^3.2.47",
-    "vue-router": "^4.1.6",
-    "vue-tsc": "^1.2.0",
+    "vue": "^3.3.8",
+    "vue-router": "^4.2.5",
+    "vue-tsc": "^1.8.22",
     "windicss": "^3.5.6",
     "yorkie-pnpm": "^2.0.1"
   }
