chore: formatter code

--- a/.prettierrc
+++ b/.prettierrc
@@ -2,12 +2,12 @@
   "printWidth": 100,
   "tabWidth": 2,
   "useTabs": false,
-  "semi": false,
+  "semi": true,
   "vueIndentScriptAndStyle": true,
   "singleQuote": false,
   "quoteProps": "as-needed",
   "bracketSpacing": true,
-  "trailingComma": "none",
+  "trailingComma": "all",
   "jsxBracketSameLine": false,
   "jsxSingleQuote": false,
   "arrowParens": "always",
