--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
+    "@wdns/vue-code-block": "^2.3.2",
     "codemirror": "^5.65.16",
     "diff-match-patch": "^1.0.5"
   },
@@ -74,33 +75,31 @@
     "@vitejs/plugin-vue": "^5.0.4",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue/cli-plugin-typescript": "~4.5.15",
+    "@vueuse/core": "^10.9.0",
     "chalk": "^4.1.2",
     "conventional-changelog-cli": "^2.0.31",
     "dedent": "^0.7.0",
     "diff-match-patch": "^1.0.5",
+    "enquirer": "^2.3.6",
     "eslint": "^8.35.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.9.0",
     "execa": "^7.0.0",
     "less": "^4.1.3",
     "lint-staged": "^10.2.10",
     "minimist": "^1.2.6",
     "picocolors": "^1.0.0",
-    "prettier": "^2.8.4",
     "prompts": "^2.4.2",
     "semver": "^7.3.5",
     "tsx": "^3.12.3",
-    "enquirer": "^2.3.6",
     "typescript": "^5.4.3",
     "unplugin-auto-import": "^0.15.0",
     "vite": "^5.2.6",
     "vite-plugin-dts": "^2.0.2",
     "vite-plugin-pages": "^0.32.0",
     "vite-plugin-windicss": "^1.8.10",
-    "vitepress": "1.0.0-alpha.49",
+    "vitepress": "^1.0.1",
     "vue": "^3.4.21",
     "vue-router": "^4.1.6",
     "vue-tsc": "^1.2.0",
