docs: update docs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,7 @@
     "packages/**/*",
     "playground/**/*",
     "docs/**/*",
+    "docs/demo/**/*.vue",
     "script",
     "types",
     "*.ts",
