--- a/package.json
+++ b/package.json
@@ -55,12 +55,14 @@
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
+    "@unocss/transformer-directives": "^0.58.8",
     "@wdns/vue-code-block": "^2.3.2",
-    "codemirror": "^5.65.16",
-    "diff-match-patch": "^1.0.5"
+    "codemirror": "^5",
+    "diff-match-patch": "^1.0.5",
+    "jsonlint-mod": "^1.7.6"
   },
   "peerDependencies": {
-    "codemirror": "^5.65.16",
+    "codemirror": "^5",
     "diff-match-patch": "^1.0.5",
     "vue": "^3.x"
   },
@@ -86,6 +88,7 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-vue": "^9.9.0",
     "execa": "^7.0.0",
+    "jshint": "^2.13.6",
     "less": "^4.1.3",
     "lint-staged": "^10.2.10",
     "minimist": "^1.2.6",
@@ -94,6 +97,7 @@
     "semver": "^7.3.5",
     "tsx": "^3.12.3",
     "typescript": "^5.4.3",
+    "unocss": "^0.58.8",
     "unplugin-auto-import": "^0.15.0",
     "vite": "^5.2.6",
     "vite-plugin-dts": "^2.0.2",
