--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "ESNext",
     "target": "esnext",
     "lib": ["DOM", "ESNext"],
-    "types": ["vite/client"],
+    "types": ["vite/client", "element-plus/global"],
     "jsx": "preserve",
     "allowJs": true,
     "strict": true,
@@ -34,6 +34,8 @@
     "*.tsx",
     "*.vue",
     "*.d.ts",
-    "*.md"
+    "*.md",
+    "docs/demo/examples/Interactive/lib/cmsearch.min.js",
+    "docs/demo/examples/Interactive/lib/combo.min.js"
   ]
 }
