chore: 更新依赖,格式化代码

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,10 @@
     "module": "ESNext",
     "target": "esnext",
     "lib": ["DOM", "ESNext"],
-    "types": ["vite/client"],
+    "types": [
+      "node",
+      "vite/client",
+    ],
     "jsx": "preserve",
     "allowJs": true,
     "strict": true,
