--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "exports": {
     ".": {
       "import": "./dist/codemirror-editor-vue3.js",
-      "require": "./dist/codemirror-editor-vue3.umd.cjs"
+      "require": "./dist/codemirror-editor-vue3.umd.cjs",
+      "types": "./dist/packages/index.d.ts"
     }
   },
   "private": false,
@@ -50,7 +51,9 @@
     "deploy-docs": "bash scripts/deploy-docs.sh",
     "release": "tsx scripts/release.ts",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix",
+    "lint:eslint": "eslint --cache --max-warnings 0 \"{docs,packages,tests,types}/**/*.{vue,js,jsx,ts,tsx}\" --fix",
+    "lint:prettier": "prettier --write \"{docx,packages,tests,types}/**/*.{vue,js,jsx,ts,tsx,json,css,less,scss,html,md}\"",
+    "lint": "pnpm lint:eslint && pnpm lint:prettier",
     "tsc": "tsc",
     "prepublishOnly": "npm run build"
   },
@@ -71,21 +74,24 @@
     "@commitlint/config-conventional": "^16.0.0",
     "@types/codemirror": "^5.60.15",
     "@types/diff-match-patch": "^1.0.32",
+    "@types/jshint": "^2.12.4",
     "@types/node": "^16.11.13",
-    "@typescript-eslint/eslint-plugin": "^5.54.0",
-    "@typescript-eslint/parser": "^5.54.0",
+    "@typescript-eslint/eslint-plugin": "7.13.0",
+    "@typescript-eslint/parser": "7.13.0",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue/cli-plugin-typescript": "~4.5.15",
+    "@vue/eslint-config-prettier": "9.0.0",
+    "@vue/eslint-config-typescript": "13.0.0",
     "@vueuse/core": "^10.9.0",
     "chalk": "^4.1.2",
     "conventional-changelog-cli": "^2.0.31",
     "dedent": "^0.7.0",
     "diff-match-patch": "^1.0.5",
     "enquirer": "^2.3.6",
-    "eslint": "^8.35.0",
-    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint": "8.57.0",
     "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-vue": "^9.9.0",
     "execa": "^7.0.0",
     "jshint": "^2.13.6",
@@ -93,20 +99,21 @@
     "lint-staged": "^10.2.10",
     "minimist": "^1.2.6",
     "picocolors": "^1.0.0",
+    "prettier": "3.2.5",
     "prompts": "^2.4.2",
     "semver": "^7.3.5",
     "tsx": "^3.12.3",
-    "typescript": "^5.4.3",
+    "typescript": "^5.4.5",
     "unocss": "^0.58.8",
     "unplugin-auto-import": "^0.15.0",
     "vite": "^5.2.6",
-    "vite-plugin-dts": "^2.0.2",
+    "vite-plugin-dts": "^3.9.1",
     "vite-plugin-pages": "^0.32.0",
     "vite-plugin-windicss": "^1.8.10",
     "vitepress": "^1.0.1",
     "vue": "^3.4.21",
     "vue-router": "^4.1.6",
-    "vue-tsc": "^1.2.0",
+    "vue-tsc": "^2.0.21",
     "windicss": "^3.5.6",
     "yorkie-pnpm": "^2.0.1"
   }
