--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "codemirror-editor-vue3",
   "description": "CodeMirror component for Vue3",
-  "version": "2.6.0-beta.0",
+  "version": "2.6.0",
   "license": "MIT",
   "files": [
     "dist"
