format: 格式化代码

--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "release": "node --import tsx scripts/release.ts",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
     "lint:eslint": "eslint --cache --max-warnings 0 \"{docs,packages,tests,types}/**/*.{vue,js,jsx,ts,tsx}\" --fix",
-    "lint:prettier": "prettier --write \"{docx,packages,tests,types}/**/*.{vue,js,jsx,ts,tsx,json,css,less,scss,html,md}\"",
+    "lint:prettier": "prettier --write \"{docs,packages,tests,types}/**/*.{vue,js,jsx,ts,tsx,json,css,less,scss,html,md}\"",
     "lint": "pnpm lint:eslint && pnpm lint:prettier",
     "tsc": "tsc",
     "prepublishOnly": "npm run build"
